finished execises one

--- a/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
+++ b/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.15950659]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors.\n"
+    "## Calculate the output of this network using the weights and bias tensors.\n",
+    "activation(features @ weights.T + bias)"
    ]
   },
   {
@@ -164,11 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.15950659]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication\n"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "activation(torch.mm(features, weights.t()) + bias)"
    ]
   },
   {
@@ -206,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.31708315]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Your solution here.\n"
+    "## Your solution here.\n",
+    "activation(torch.mm(activation(torch.mm(features, W1) + B1), W2) + B2)"
    ]
   },
   {
@@ -267,19 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.61995741, 0.33155467, 0.8174536 ],\n",
-       "       [0.34563545, 0.15472967, 0.23112194],\n",
-       "       [0.57911665, 0.7242849 , 0.41691137],\n",
-       "       [0.68045155, 0.49653628, 0.32549209]])"
+       "array([[0.36470651, 0.77524728, 0.77591646],\n",
+       "       [0.85640577, 0.9224927 , 0.83385151],\n",
+       "       [0.59085738, 0.15276241, 0.58445926],\n",
+       "       [0.28775492, 0.50124177, 0.0586013 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,19 +330,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.61995741, 0.33155467, 0.81745360],\n",
-       "        [0.34563545, 0.15472967, 0.23112194],\n",
-       "        [0.57911665, 0.72428490, 0.41691137],\n",
-       "        [0.68045155, 0.49653628, 0.32549209]], dtype=torch.float64)"
+       "tensor([[0.36470651, 0.77524728, 0.77591646],\n",
+       "        [0.85640577, 0.92249270, 0.83385151],\n",
+       "        [0.59085738, 0.15276241, 0.58445926],\n",
+       "        [0.28775492, 0.50124177, 0.05860130]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,19 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.61995741, 0.33155467, 0.8174536 ],\n",
-       "       [0.34563545, 0.15472967, 0.23112194],\n",
-       "       [0.57911665, 0.7242849 , 0.41691137],\n",
-       "       [0.68045155, 0.49653628, 0.32549209]])"
+       "array([[0.36470651, 0.77524728, 0.77591646],\n",
+       "       [0.85640577, 0.9224927 , 0.83385151],\n",
+       "       [0.59085738, 0.15276241, 0.58445926],\n",
+       "       [0.28775492, 0.50124177, 0.0586013 ]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,19 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.23991482, 0.66310935, 1.63490719],\n",
-       "        [0.69127089, 0.30945934, 0.46224388],\n",
-       "        [1.15823331, 1.44856981, 0.83382274],\n",
-       "        [1.36090309, 0.99307255, 0.65098418]], dtype=torch.float64)"
+       "tensor([[0.72941303, 1.55049455, 1.55183291],\n",
+       "        [1.71281154, 1.84498540, 1.66770302],\n",
+       "        [1.18171475, 0.30552483, 1.16891852],\n",
+       "        [0.57550985, 1.00248354, 0.11720261]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,19 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.23991482, 0.66310935, 1.63490719],\n",
-       "       [0.69127089, 0.30945934, 0.46224388],\n",
-       "       [1.15823331, 1.44856981, 0.83382274],\n",
-       "       [1.36090309, 0.99307255, 0.65098418]])"
+       "array([[0.72941303, 1.55049455, 1.55183291],\n",
+       "       [1.71281154, 1.8449854 , 1.66770302],\n",
+       "       [1.18171475, 0.30552483, 1.16891852],\n",
+       "       [0.57550985, 1.00248354, 0.11720261]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
